Update payment phone type for shipping address

BUG=717711

Review-Url: https://codereview.chromium.org/2866413002
Cr-Commit-Position: refs/heads/master@{#470660}

Former-commit-id: b7718e7edfb712e4f6a38b72f0b9a7a8928719fc